--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@
   font-family: 'Raleway', sans-serif;
 }
 
-.header {
+/* .header {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 50px;
   background-color: var(--color-primary);
   border-bottom: 1px solid var(--color-secondary);
-}
+} */
 
 ul {
   display: flex;
@@ -33,7 +33,7 @@ ul {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  min-height: 300px;
+  min-height: 100px;
   background-color: var(--color-primary);
 }
 
@@ -45,10 +45,10 @@ ul {
   gap: 0 50px;
   align-items: center;
   width: 100%;
-  min-height: 300px;
+  min-height: 200px;
   background-color: var(--color-primary);
   color: var(--color-secondary);
-  border-bottom: 1px solid var(--color-secondary);
+  /* border-bottom: 1px solid var(--color-secondary); */
 }
 
 .bloc__btn {
@@ -229,8 +229,8 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   border: 1px solid var(--color-secondary);
   border-radius: 10px;
   background-color: var(--color-secondary);
